--- a/main.css
+++ b/main.css
@@ -3,3 +3,28 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.container {
+  margin: 10px;
+  text-align: center;
+}
+
+#dashes {
+  justify-content: center;
+  margin: 10px;
+  display: flex;
+  font-size: 41px;
+  text-align: center;
+}
+
+button {
+  width: 43px;
+  padding: 16px;
+  margin: 3px;
+  font-size: 15px;
+  background-color: #f48c06;
+  outline: none;
+  color: white;
+  border: 0.5px;
+  border-radius: 15px;
+}
